# dpo-eval

./: .gitignore  README.md  benchmark_common.py  build_hh_leaderboards.py  config_utils.py  generate_hh_sweep_reports.py  hf_log_export.py  llama-hh-infer.sh  markdown_to_docx.py  model_generation.py  pyproject.toml  qwen-hh-infer.sh  qwen-hh-judge.sh  requirements.txt
Wandb-export/: README.md  export_project.py  export_run.py
alpacaeval/: alpacaeval_common.py  alpacaeval_eval.py  alpacaeval_infer.py  batch_runner.py  config_20260425_hf_batch_inference.yaml  config_20260426_ultrafeedback_batch_inference.yaml  config_alpacaeval.yaml  config_alpacaeval_batch_llama3_simpo_new_method.yaml  config_alpacaeval_batch_princeton-nlp_llama-3-base-8b-sft_simpo_collection.yaml  config_alpacaeval_batch_w61_new_dpo_qt043_sstar04_20260429.yaml  config_alpacaeval_batch_w61_qwen3_new_dpo_qt_sstar_sweep_20260501.yaml  config_alpacaeval_beta_dpo.yaml  config_alpacaeval_eval_outputs_0_3_w61_new_dpo_qt043_sstar04_20260429.yaml  config_alpacaeval_llama3_8b_base_beta_dpo_benchmark.yaml  config_alpacaeval_llama3_8b_base_margin_dpo_benchmark.yaml  config_eval_llama-3-8b-base-beta-dpo-ultrafeedback-4xh200-batch-128-20260424-044124.yaml  config_eval_llama-3-8b-base-new-dpo-ultrafeedback-4xh200-batch-128-q_t-0.4-s_star-0.2-20260425-111846.yaml  config_eval_llama-3-8b-base-new-dpo-ultrafeedback-4xh200-batch-128-q_t-0.4-s_star-0.2-20260426-185938.yaml  config_eval_llama-3-8b-base-new-dpo-ultrafeedback-4xh200-batch-128-q_t-0.4-s_star-0.4-20260425-111846.yaml  (+81 more)
arenahard/: __init__.py  api_config.yaml  (+35 more)
(+891 files in other folders)
