[project]
name = "dpo-eval"
version = "0.1.0"
description = "Standalone evaluation pipeline for AlpacaEval, Arena-Hard, MT-Bench, and HH judging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "alpaca-eval==0.6.2",
    "datasets>=2.18.0,<4",
    "fschat>=0.2.36",
    "huggingface-hub>=0.34.0",
    "openai>=2.0.0",
    "pyyaml>=6.0.3",
    "setuptools>=61.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "transformers==4.57.3",
    "vllm>=0.16.0; platform_system == 'Linux'",
]

[project.scripts]
alpacaeval-infer = "alpacaeval.alpacaeval_infer:main"
alpacaeval-eval = "alpacaeval.alpacaeval_eval:main"
alpacaeval-batch = "alpacaeval.batch_runner:main"
arenahard-infer = "arenahard.arenahard_infer:main"
arenahard-eval = "arenahard.arenahard_eval:main"
arenahard-batch = "arenahard.batch_runner:main"
mtbench-infer = "mtbench.mtbench_infer:main"
mtbench-eval = "mtbench.mtbench_eval:main"
mtbench-batch = "mtbench.batch_runner:main"
hh-generate = "gpt_judge_HH.generate_hh_output:main"
hh-judge = "gpt_judge_HH.judge_outputs_gpt4o:main"

[tool.setuptools]
py-modules = ["benchmark_common", "config_utils", "model_generation"]

[tool.setuptools.packages.find]
where = ["."]
include = ["alpacaeval*", "arenahard*", "gpt_judge_HH*", "mtbench*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
